--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ProseMirror:focus {
+  outline: none;
+}
+
+.tiptap div.my-custom-is-empty-class div div div::before {
+  color: #adb5bd;
+  content: 'To-do';
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
