feat: update node

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@
   outline: none;
 }
 
-.tiptap div.my-custom-is-empty-class div div div::before {
+.tiptap div.my-custom-is-empty-class div div p::before {
   color: #adb5bd;
   content: 'To-do';
   float: left;
